test(CartService): add ProductUpdateListener unit tests